# sistema-aeroporto

./: CMakeLists.txt  Makefile  README.md  run_tests.sh
examples/: includes.hpp  main.cpp  main_amanda.cpp
src/: Airport.cpp  Airport.hpp  BoardingCrew.cpp  BoardingCrew.hpp  Client.cpp  Client.hpp  Common.hpp  DateTime.cpp  DateTime.hpp  Destination.cpp  Destination.hpp  EnumFlight.cpp  EnumFlight.hpp  EnumFlightStatus.cpp  EnumFlightStatus.hpp  EnumSeat.cpp  EnumSeat.hpp  Errors.hpp  Flight.cpp  Flight.hpp  FlightModule.cpp  FlightModule.hpp  FlightSchedule.cpp  FlightSchedule.hpp  Passenger.cpp  Passenger.hpp  People.hpp  Person.cpp  Person.hpp  Pilot.cpp  Pilot.hpp  Plane.cpp  Plane.hpp  Resource.cpp  Resource.hpp  ResourceModule.cpp  ResourceModule.hpp  Resources.cpp  Resources.hpp  Runway.cpp  (+9 more)
src/Enum/: EnumFlight.cpp  EnumFlight.hpp  EnumSeat.cpp  EnumSeat.hpp
tests/: end_to_end_test.cpp  flight_module_test.cpp  flight_schedule_test.cpp  resource_module_test.cpp  sale_module_test.cpp
tests/mocks/: flight_module_mock.cpp  flight_module_mock.hpp
